--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "description": "",
   "version": "0.1.0",
   "dependencies": {
+    "lodash": "^4.17.15",
     "mysql": "^2.17.1",
     "oauth-signature": "^1.5.0",
+    "promise-mysql": "^4.1.0",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
   },
