--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@
 # uses to deploy your code to your provider of choice
 
 # The `service` block is the name of the service
-service: chkstack3
+service: template
 
 # The `provider` block defines where your service will be deployed
 provider:
